encoder: unref encoder elements created to check formats work

https://bugzilla.gnome.org/show_bug.cgi?id=769404